- Update for expert distribution imports